[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/PNG/Enemies/enemyGreen1.png" type="Texture" id=1]
[ext_resource path="res://ships/enemies/enemy1.gd" type="Script" id=2]

[node name="enemy1" type="Area2D" groups=["damageable"]]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7, -23, 7, -23, 10, -33, 28, -41, 44, -16, 25, 41, 17, 38, 16, 40, 10, 38, 18, 12, 15, 11, 13, 16, -12, 16, -14, 11, -17, 12, -10, 37, -16, 40, -17, 39, -23, 41, -45, -13, -30, -41, -11, -33 )

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_enemy1_area_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
